--- a/gtk-3.0/Stylus/Minutiae.styl
+++ b/gtk-3.0/Stylus/Minutiae.styl
@@ -48,10 +48,13 @@ ECalendar
 
 
 /** GNOME TERMINAL **/
-TerminalScreen
+vte-terminal.terminal-screen
     background-color:   WindowColorDark;
     color:              VibrantBlue;
+    border-radius:      0px;
 
+    terminal-screen-container
+        border-radius:  0px;
 
 
 /** NAUTILUS **/
