--- a/gtk-3.0/Stylus/Unity.styl
+++ b/gtk-3.0/Stylus/Unity.styl
@@ -33,24 +33,26 @@ UnityDecoration
     border-radius:          0em;
     color:                  UnityDecoratorTextColor;
 
+    debug();
+
 
     &:backdrop
         background-color:   UnityDecoratorColorDim;
         color:              UnityDecoratorTextColorDim;
 
-    &.bottom
+    .bottom
         border-bottom:      1px solid WindowDarkGloss;
         border-left:        1px solid WindowLightGloss;
         border-radius:      0em 0em 0.5em 0.5em;
         border-right:       1px solid WindowDarkGloss;
 
-    &.left
+    .left
         border-left:        1px solid WindowLightGloss;
 
-    &.right
+    .right
         border-right:       1px solid WindowDarkGloss;
 
-    &.top
+    .top
         border-left:        1px solid WindowLightGloss;
         border-radius:      0.5em 0.5em 0em 0em;
         border-right:       1px solid WindowDarkGloss;
