--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -14,98 +14,41 @@ button-text-color(c)
     image, label
         color:  c;
 
-/** INNER WINDOWS & CONTENTS **/
-/* VIEW - Controls individual elements of a list or table.
- *
- *  The ".view" selector generally belongs to lists or tables of data. It specifically controls the individual elements that
- *  are present within those lists (e.g. a single cell within a table). Common examples associated with this selector
- *  include:
- *
- *      - The file chooser side bar in GEdit
- *      - The various lists found throughout Unity Tweak Tool
- *      - Files within Nautilus (only when viewing items as a list)
- */
-view
-    @extends                            GtkWidget;
-    -GtkTreeView-expander-size:         10;
-    -GtkTreeView-indent-expanders:      true;
-    -GtkTreeView-vertical-separator:    0;
-    padding:                            0.25em;
-
 .cell,
 row
+    image
+        color:                  SelectionColor;
     &:selected
-        background-image:               SelectionGradientVertical;
-        color:                          TextColorSelected;
+        background-color:       SelectionColor;
+        color:                  TextColorSelected;
+        image, label            { color: TextColorSelected; }
+
         &:backdrop
-            background-color:           HighlightColor;
-            background-image:           none;
-            color:                      TextColorHighlighted;
+            background-color:   HighlightColor;
+            background-image:   none;
+            color:              TextColorSelected;
+            image, label        { color: TextColorHighlighted; }
 
-/* GTKPANED - Controls the widget used for separated, multipane UI views.
- *
- *  The GtkPaned widget is often behind multi-view UIs found in explorer-like applications. More specifically, it holds
- *  multiple resizeable member panes that themselves can hold essentially any widget.
- */
-paned
-    @extends                    GtkWidget;
-    -GtkPaned-handle-size:      5;
+.sidebar row
+    flat();
+    button-text-color:          TextColor;
+    &:selected
+        background-color:       SelectionColor;
+        button-text-color:      TextColorSelected;
 
-/* SIDEBAR - Controls panels docked to the sides of a window.
- *
- *  The ".sidebar" selector is most typically found in file chooser windows and, by extension, Nautilus. As its name implies,
- *  it controls a bar or panel that resides on one side (usually the left) of the window.
- */
-.sidebar,
-placessidebar,
-stacksidebar
-    @extends view;
-    // flat();
+        &:backdrop
+            background-color:   HighlightColor;
+            button-text-color:  TextColorHighlighted;
 
-    row
-        // @extends GtkWidget;
+    label
+        font-weight:            bold;
+        padding:                1em;
+
+    .sidebar-button
         flat();
-        button-text-color:          TextColor;
-        &:selected
-            background-image:       SelectionGradientVertical;
-            button-text-color:      TextColorSelected;
 
-            &:backdrop
-                background-color:   HighlightColor;
-                background-image:   none;
-                button-text-color:  TextColorHighlighted;
-
-        label
-            font:                   bold;
-            padding:                1em;
-
-        .sidebar-button
-            flat();
-            // @extends GtkWidget;
-
-        .sidebar-icon
-            padding-left:           0.5em;
-
-    scrolledwindow
-        flat();
-        // @extends GtkWidget;
-
-
-list
-    separator.horizontal,
-    separator.vertical      { color: transparent; }
-
-    .list-row,
-    .list-row button
-        @extends stacksidebar row .sidebar-button;
-
-scrolledwindow
-    -GtkScrolledWindow-scrollbar-spacing:           0;
-    -GtkScrolledWindow-scrollbars-within-bevel:     true;
-
-    deeper-inset();
-    border-radius:              0.25em;
-    padding:                    0.25em 0.25em;
+    .sidebar-icon
+        padding-left:           0.5em;
 
 FooScrollArea,
 GtkDrawingArea
