Fixed maximized windows becoming transparent.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -14,6 +14,11 @@ window
         background-color:       inherit;
         padding:                0.25em 0em;
 
+    &.maximized
+        &, .titlebar, headerbar
+            background-color:   WindowColor;
+            &:backdrop          { background-color: WindowColorDim; }
+
     &:not(.csd):not(popover):not(.popup)
         background-color:       WindowColor;
         &:backdrop              { background-color: WindowColorDim; }
