Lightened the default text color.

--- a/gtk-3.0/Stylus/Standards/Colors/Text.styl
+++ b/gtk-3.0/Stylus/Standards/Colors/Text.styl
@@ -7,7 +7,7 @@
 
 
 /** GENERAL TEXT COLORS **/
-TextColor                   = Silver;
+TextColor                   = LightSilver;
 TextColorDim                = DarkSilver;
 TextColorDimmer             = VeryDarkSilver;
 TextColorDisabled           = LightGray;
