Fixed rubberband styling and refactored it into 'Containers'.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -88,6 +88,12 @@ decoration
         background-color:       TooltipColor;
         padding:                0px;
 
+/* RUBBERBAND - Controls the scalable rectangle drawn when selecting multiple icons using the mouse. */
+.rubberband,
+rubberband
+    background-color:           alpha(RubberBandColor, 0.25);
+    border:                     1px solid RubberBandBorderColor;
+
 scrolledwindow
 
     deeper-inset();
