--- a/gtk-3.0/Stylus/Standards/Colors/UI.styl
+++ b/gtk-3.0/Stylus/Standards/Colors/UI.styl
@@ -56,6 +56,9 @@ OutsetColor                         = VeryDarkGray;
 ProgressBarColor                    = VibrantBlue;
 ProgressBarColorDim                 = Silver;
 
+RubberBandColor                     = alpha(Silver, 0.25);
+RubberBandBorderColor               = SkyBlue;
+
 ScrollbarColor                      = VibrantBlue;
 ScrollbarColorDim                   = WindowColorLight;
 
