Refactored popup and popover code into the 'Menus' file.

--- a/gtk-3.0/Stylus/Menus.styl
+++ b/gtk-3.0/Stylus/Menus.styl
@@ -30,3 +30,19 @@ popover modelbutton
     menubar > &
         border-radius:              0.125em;
         padding:                    0.25em 0.5em;
+
+/* POPUP - Controls the base windows used for context, drop-down, and combo-box menus. */
+.popup,
+.popup.background,
+tooltip,
+tooltip.background
+
+    flat();
+    color:                          MenuTextColor;
+
+popover,
+popover.background
+
+    deep-outset();
+    background-color:               MenuColor;
+    border-radius:                  0.5em;
